@@ -1,5 +1,5 @@
 Package: mi
-Version: 0.07-4
+Version: 0.07-4.01
 Date: 2009-6-11
 Title: Missing Data Imputation and Model Checking
 Author:
