@@ -1,4 +1,8 @@
 2009-6-10 Yu-Sung Su     <ys463@columbia.edu>  
+   * DESCRIPTION (Version, Date): 0.07-4
+   * R/mi.pooled: fix a bug in mi.pooled (B term)
+
+2009-6-10 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.07-3
 
 2009-6-8 Yu-Sung Su     <ys463@columbia.edu>  
